# Sparse3dGrid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: colors.cmake  root_tools.cmake
include/: LinkDef.h  TAdaptiveGrid3.h  TAdaptiveGrid3D.h  TOctreeLookup.h  TSparseGrid3D.h
src/: TAdaptiveGrid3.cpp  TAdaptiveGrid3D.cpp  TOctreeLookup.cpp  TSparseGrid3D.cpp
test/: construct_tree.cpp  hello_world.cpp
utils/: LinkDef.h  LinkDefMakerMulti.py
